// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EPDA quote variant golden output > HCM preserves formula totals and row numbering 1`] = `
{
  "rowOrder": [
    "Tonnage",
    "Navigation due",
    "Pilotage",
    "Tug assistance charge",
    "Moor / Unmooring",
    "Berth due",
    "Anchorage fees if any",
    "Quarantine fee",
    "Ocean Frt Tax",
    "Clearance fees",
    "Garbage removal fee",
    "On GRT: 6,001 - 10,000: USD 700 x 90%(sub-agency)",
    "On cargo: USD0.00/mt x 15,000mts x 90%(sub-agency)",
    "Taxi/Courrier/Communication for agency service",
    "Boat-hire for agency service",
  ],
  "sha256": "389c4645586658b3acf3732b5f8f0136924c117bc44054c617bb2bbae1d055a9",
  "totals": {
    "A": "12,890.80",
    "B": "980.00",
    "G": "13,870.80",
  },
}
`;

exports[`EPDA quote variant golden output > HN preserves formula totals and row numbering 1`] = `
{
  "rowOrder": [
    "Tonnage",
    "Navigation due",
    "Pilotage",
    "Tug assistance charge",
    "Moor / Unmooring",
    "Berth due",
    "Anchorage fees if any",
    "Quarantine fee",
    "Ocean Frt Tax",
    "Clearance fees",
    "Garbage removal fee",
    "On GRT: 6,001 - 10,000: USD 700 x 90%(sub-agency)",
    "On cargo: USD0.00/mt x 15,000mts x 90%(sub-agency)",
    "Taxi/Courrier/Communication for agency service",
    "Boat-hire for agency service",
  ],
  "sha256": "389c4645586658b3acf3732b5f8f0136924c117bc44054c617bb2bbae1d055a9",
  "totals": {
    "A": "12,890.80",
    "B": "980.00",
    "G": "13,870.80",
  },
}
`;

exports[`EPDA quote variant golden output > QN preserves formula totals and row numbering 1`] = `
{
  "rowOrder": [
    "Tonnage",
    "Navigation due",
    "Pilotage",
    "Tug assistance charge",
    "Moor / Unmooring",
    "Berth due",
    "Anchorage fees if any",
    "Quarantine fee",
    "Ocean Frt Tax",
    "Clearance fees",
    "Garbage removal fee",
    "On GRT: 6,001 - 10,000: USD 700 x 90%(sub-agency)",
    "On cargo: USD0.00/mt x 15,000mts x 90%(sub-agency)",
    "Taxi/Courrier/Communication for agency service",
    "Boat-hire for agency service",
  ],
  "sha256": "255b87a0fa89a5b0d255efa90d6372d523dac2fbee12dd5418f12334dd8ce1b5",
  "totals": {
    "A": "14,854.80",
    "B": "980.00",
    "G": "15,834.80",
  },
}
`;
